unpackaged/main/default/objects/Account/fields/RICSC_Email__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Email__c</fullName>
        <description>email field to capture the email of the Boutique</description>
        <label>Email</label>
        <type>Email</type>
    </CustomField>