unpackaged/main/default/objects/Account/fields/RICSC_eSegment__c.field-meta.xml
<CustomField>
        <fullName>RICSC_eSegment__c</fullName>
        <description>Calculated by BI, indicates the behavior of the customer when receiving our emailing</description>
        <label>eSegment</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>