unpackaged/main/default/objects/Account/fields/RICSC_EstimatedAge__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EstimatedAge__c</fullName>
        <label>Estimated Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>