unpackaged/main/default/objects/Account/fields/RICSC_FirstSalesDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FirstSalesDate__c</fullName>
        <description>Date that client made first purchase</description>
        <label>First Sales Date</label>
        <type>Date</type>
    </CustomField>