unpackaged/main/default/objects/Account/fields/RICSC_FirstTransactionDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FirstTransactionDate__c</fullName>
        <description>Date of the first transaction executed by the client</description>
        <label>First Transaction Date</label>
        <type>Date</type>
    </CustomField>