unpackaged/main/default/objects/Account/fields/RICSC_FlagforArchiving__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FlagforArchiving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Archiving</description>
        <label>Flag for Archiving</label>
        <type>Checkbox</type>
    </CustomField>