unpackaged/main/default/objects/Account/fields/RICSC_FlagManual__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FlagManual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Techical field, coming from the integration systems to reflect the fact that the Reference SA and Reference BTQ are not following the automatic assigment but have been manually overwritten.</description>
        <label>Flag Manual</label>
        <type>Checkbox</type>
    </CustomField>