unpackaged/main/default/objects/Account/fields/RICSC_FullName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_FullName__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>