unpackaged/main/default/objects/Account/fields/RICSC_Gender__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Gender__c</fullName>
        <description>Client's gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Couple</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>