unpackaged/main/default/objects/Account/fields/RICSC_GlobalSegment__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GlobalSegment__c</fullName>
        <description>Calculated segmentation based on rules taking into account the local transactions</description>
        <label>Global Segment</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>