unpackaged/main/default/objects/Account/fields/RICSC_GoldenRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GoldenRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Golden Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RICSC_IsGoldenRecord__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RICSC_NotToBeGrouped__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Local Records)</relationshipLabel>
        <relationshipName>RICSC_AccountGoldenRecord</relationshipName>
        <type>Lookup</type>
    </CustomField>