unpackaged/main/default/objects/Account/fields/RICSC_GR__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GR__c</fullName>
        <description>Formula field showing golden record icon if a the record is a golden one</description>
        <formula>if( RICSC_IsGoldenRecord__c , IMAGE('/resource/GRIcon?','Image not found', 25,25),'' )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GR</label>
        <type>Text</type>
    </CustomField>