unpackaged/main/default/objects/Account/fields/RICSC_HasLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HasLocalRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Local Records</label>
        <type>Checkbox</type>
    </CustomField>