unpackaged/main/default/objects/Account/fields/RICSC_HighestJeweleryTicket__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HighestJeweleryTicket__c</fullName>
        <description>Value of the most valuable piece of jewelry purchased by client</description>
        <label>Highest Jewelery Ticket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>