unpackaged/main/default/objects/Account/fields/RICSC_HighJeweleryPieces__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HighJeweleryPieces__c</fullName>
        <description>Calculated number field based on SF rule to indicate the number of high-value jewelry pieces purchased by client</description>
        <label>High Jewelery Pieces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>