unpackaged/main/default/objects/Account/fields/RICSC_HighJeweleryTurnover__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HighJeweleryTurnover__c</fullName>
        <description>Sum (in price) of all high-value jewelry piece, calculated in SF</description>
        <label>High Jewelery Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>