unpackaged/main/default/objects/Account/fields/RICSC_HighJewelleryClient__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HighJewelleryClient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to identify High Jewellery client records and exclude them from the sharing rules</description>
        <label>High Jewellery Client</label>
        <type>Checkbox</type>
    </CustomField>