unpackaged/main/default/objects/Account/fields/RICSC_Hobbies__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Hobbies__c</fullName>
        <description>Client's hobbies in text format</description>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CRICKET</fullName>
                </value>
                <value>
                    <fullName>F1_MOTOR_RACING</fullName>
                </value>
                <value>
                    <fullName>PEN_COLL</fullName>
                </value>
                <value>
                    <fullName>RUGBY</fullName>
                </value>
                <value>
                    <fullName>SAILING</fullName>
                </value>
                <value>
                    <fullName>SHOPPING</fullName>
                </value>
                <value>
                    <fullName>SKIING</fullName>
                </value>
                <value>
                    <fullName>SPORT</fullName>
                </value>
                <value>
                    <fullName>TENNIS</fullName>
                </value>
                <value>
                    <fullName>THEATRE</fullName>
                </value>
                <value>
                    <fullName>TRAVEL</fullName>
                </value>
                <value>
                    <fullName>WATCH_COLL</fullName>
                </value>
                <value>
                    <fullName>WATER</fullName>
                </value>
                <value>
                    <fullName>WHISKY</fullName>
                </value>
                <value>
                    <fullName>WINE</fullName>
                </value>
                <value>
                    <fullName>WINTER_SPORTS</fullName>
                </value>
                <value>
                    <fullName>YACHTING</fullName>
                </value>
                <value>
                    <fullName>YOGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>