unpackaged/main/default/objects/Account/fields/RICSC_IntegrationResultCRM__c.field-meta.xml
<CustomField>
        <fullName>RICSC_IntegrationResultCRM__c</fullName>
        <description>Technical Field -  to indicate the detailed result of the latest consent integration alignment to CRM</description>
        <label>Integration Result CRM</label>
        <type>TextArea</type>
    </CustomField>