unpackaged/main/default/objects/Account/fields/RICSC_IntegrationResultSWSE__c.field-meta.xml
<CustomField>
        <fullName>RICSC_IntegrationResultSWSE__c</fullName>
        <description>Technical Field -  to indicate the detailed result of the latest consent integration alignment to SWSE</description>
        <label>Integration Result SWSE</label>
        <type>TextArea</type>
    </CustomField>