unpackaged/main/default/objects/Account/fields/RICSC_IntegrationStatusSWSE__c.field-meta.xml
<CustomField>
        <fullName>RICSC_IntegrationStatusSWSE__c</fullName>
        <description>Technical Field -  to indicate the status of the latest consent integration alignment to SWSE</description>
        <label>Integration Status SWSE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>