unpackaged/main/default/objects/Account/fields/RICSC_IsGoldenRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_IsGoldenRecord__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Golden Record</label>
        <type>Checkbox</type>
    </CustomField>