unpackaged/main/default/objects/Account/fields/RICSC_JLCInactiveClient__c.field-meta.xml
<CustomField>
        <fullName>RICSC_JLCInactiveClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JLC Inactive Client</label>
        <type>Checkbox</type>
    </CustomField>