unpackaged/main/default/objects/Account/fields/RICSC_LastPurchaseBoutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LastPurchaseBoutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated with the SF ID correspondent to the respective SAP boutique coming from SAP</description>
        <label>Last Purchase Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>