unpackaged/main/default/objects/Account/fields/RICSC_LastPurchaseMarket__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LastPurchaseMarket__c</fullName>
        <description>This field is populated with the SF ID correspondent to the respective SAP boutique coming from SAP</description>
        <label>Last Purchase Market</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>