unpackaged/main/default/objects/Account/fields/RICSC_LastSalesDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LastSalesDate__c</fullName>
        <description>Date that client made most recent purchase</description>
        <label>Last Sales Date</label>
        <type>Date</type>
    </CustomField>