unpackaged/main/default/objects/Account/fields/RICSC_LastTransactionDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LastTransactionDate__c</fullName>
        <description>Date of the most recent transaction executed by the client</description>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </CustomField>