unpackaged/main/default/objects/Account/fields/RICSC_Localisation__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Localisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the localisation object</description>
        <label>Localisation</label>
        <referenceTo>RICSC_Localisation__c</referenceTo>
        <relationshipLabel>Boutiques</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>