unpackaged/main/default/objects/Account/fields/RICSC_LocalVIP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LocalVIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to indicate if there is at least 1 VIP among the Local Records</description>
        <inlineHelpText>If flagged at least on Local record is VIP</inlineHelpText>
        <label>Local VIP</label>
        <type>Checkbox</type>
    </CustomField>