unpackaged/main/default/objects/Account/fields/RICSC_MaritalStatus__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MaritalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates if the customer is married</description>
        <label>Marital Status</label>
        <type>Checkbox</type>
    </CustomField>