unpackaged/main/default/objects/Account/fields/RICSC_MasterRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MasterRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to identify an Account cloned in the Golden Record creation process</description>
        <label>Master Record</label>
        <type>Checkbox</type>
    </CustomField>