unpackaged/main/default/objects/Account/fields/RICSC_MasterRecordScore__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MasterRecordScore__c</fullName>
        <description>This field is used to calculate a score for the Genera Rule for the Master Record Definition during the merge process.</description>
        <formula>RICSC_MRScoreTurnover__c  *  RICSC_MRScoreFrequency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Record Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>