unpackaged/main/default/objects/Account/fields/RICSC_MobileDevice__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MobileDevice__c</fullName>
        <label>Mobile Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Other Smartphone</fullName>
                </value>
                <value>
                    <fullName>Other Touchscreen Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>