unpackaged/main/default/objects/Account/fields/RICSC_MRScoreFrequency__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MRScoreFrequency__c</fullName>
        <description>Technical field to calculate the score - Not visible at Layout</description>
        <label>MR Score: Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>