unpackaged/main/default/objects/Account/fields/RICSC_MRScoreTurnover__c.field-meta.xml
<CustomField>
        <fullName>RICSC_MRScoreTurnover__c</fullName>
        <description>Field used for calculation of a custom Turnover Score for Master Record selection Score. It counts all historical transaction</description>
        <label>MR Score: Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>