unpackaged/main/default/objects/Account/fields/RICSC_Nationality__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Nationality__c</fullName>
        <description>Nationality of the client</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antiguan</fullName>
                </value>
                <value>
                    <fullName>Argentinian</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Arubanic</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahaman</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadan</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Belizean</fullName>
                </value>
                <value>
                    <fullName>Belorussian</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bermudan</fullName>
                </value>
                <value>
                    <fullName>Bharaini</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Botswanan</fullName>
                </value>
                <value>
                    <fullName>Bouvet Islands</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>