unpackaged/main/default/objects/Account/fields/RICSC_Nickname__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Nickname__c</fullName>
        <description>Nickname of the client</description>
        <label>Nickname</label>
        <type>TextArea</type>
    </CustomField>