unpackaged/main/default/objects/Account/fields/RICSC_Notes__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Notes__c</fullName>
        <description>Notes coming from SAP CRM. Long notes stored on the customers, same issue than activities to retrieve this information</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>