unpackaged/main/default/objects/Account/fields/RICSC_NotToBeGrouped__c.field-meta.xml
<CustomField>
        <fullName>RICSC_NotToBeGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to avoid the Account record to be merged with others in any case</description>
        <label>Not To Be Grouped</label>
        <type>Checkbox</type>
    </CustomField>