unpackaged/main/default/objects/Account/fields/RICSC_OtherFirstName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_OtherFirstName__c</fullName>
        <description>Used to store the last name in local Characters - to be used for deduplication</description>
        <label>Latin First Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>