unpackaged/main/default/objects/Account/fields/RICSC_OtherLastName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_OtherLastName__c</fullName>
        <description>Used to store the name in local Characters - to be used for deduplication</description>
        <label>Latin Last Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>