unpackaged/main/default/objects/Account/fields/RICSC_PartnerBirthday__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PartnerBirthday__c</fullName>
        <description>Birth date of the client's known partner</description>
        <label>Partner Birthday</label>
        <type>Date</type>
    </CustomField>