unpackaged/main/default/objects/Account/fields/RICSC_PartnerCategory__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PartnerCategory__c</fullName>
        <description>Identify if it is an individual or an organization</description>
        <label>Partner Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>