unpackaged/main/default/objects/Account/fields/RICSC_Partnership__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Partnership__c</fullName>
        <description>Field to capture the name of the partnerstore</description>
        <label>Partnership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>P55</fullName>
                    <label>7SECONDS</label>
                </value>
                <value>
                    <fullName>P56</fullName>
                    <label>8SECONDS</label>
                </value>
                <value>
                    <fullName>P51</fullName>
                    <label>Altiplano Contest</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>American Express 09</label>
                </value>
                <value>
                    <fullName>P17</fullName>
                    <label>Art Basel 2010</label>
                </value>
                <value>
                    <fullName>P44</fullName>
                    <label>Art Basel 2011</label>
                </value>
                <value>
                    <fullName>P13</fullName>
                    <label>Asia Society 09</label>
                </value>
                <value>
                    <fullName>P19</fullName>
                    <label>Biennale 2010</label>
                </value>
                <value>
                    <fullName>P37</fullName>
                    <label>Black Amex</label>
                </value>
                <value>
                    <fullName>P14</fullName>
                    <label>Bridal</label>
                </value>
                <value>
                    <fullName>P43</fullName>
                    <label>Bridal Night</label>
                </value>
                <value>
                    <fullName>P15</fullName>
                    <label>Bridal Prospect</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>Catalyst 09</label>
                </value>
                <value>
                    <fullName>P36</fullName>
                    <label>Charity sale</label>
                </value>
                <value>
                    <fullName>P40</fullName>
                    <label>CNY Event East West Bank</label>
                </value>
                <value>
                    <fullName>P35</fullName>
                    <label>Conde Nast Traveler</label>
                </value>
                <value>
                    <fullName>P6</fullName>
                    <label>Costume Institute of NY 09</label>
                </value>
                <value>
                    <fullName>P59</fullName>
                    <label>Customer Card in watch box</label>
                </value>
                <value>
                    <fullName>P54</fullName>
                    <label>DAYS</label>
                </value>
                <value>
                    <fullName>P66</fullName>
                    <label>Dazzle Ptf37 FY16</label>
                </value>
                <value>
                    <fullName>P61</fullName>
                    <label>DM F1 FY14</label>
                </value>
                <value>
                    <fullName>P39</fullName>
                    <label>Forbes</label>
                </value>
                <value>
                    <fullName>P31</fullName>
                    <label>Four Season's</label>
                </value>
                <value>
                    <fullName>P68</fullName>
                    <label>FR_My Little Paris</label>
                </value>
                <value>
                    <fullName>P62</fullName>
                    <label>GQ F1 FY15</label>
                </value>
                <value>
                    <fullName>P10</fullName>
                    <label>Harper's Bazaar 09</label>
                </value>
                <value>
                    <fullName>P52</fullName>
                    <label>HiFu</label>
                </value>
                <value>
                    <fullName>P28</fullName>
                    <label>Las Vegas-Aria</label>
                </value>
                <value>
                    <fullName>P22</fullName>
                    <label>Las Vegas-Bellagio</label>
                </value>
                <value>
                    <fullName>P23</fullName>
                    <label>Las Vegas-Caesars Palace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>