unpackaged/main/default/objects/Account/fields/RICSC_PassportNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PassportNumber__c</fullName>
        <description>Passport number of the client</description>
        <label>Passport Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>