unpackaged/main/default/objects/Account/fields/RICSC_PostalContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PostalContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether this contact can be used for mail &amp; deliveries</description>
        <label>Postal Contact</label>
        <type>Checkbox</type>
    </CustomField>